Always have correct color contrast on these texts

--- a/src/styles/_b-box.scss
+++ b/src/styles/_b-box.scss
@@ -29,12 +29,12 @@
     border: 1px solid $blue-light;
   }
   &--blue-dark {
-    color: $purple;
+    color: $purple !important;
     background-color: $blue-dark;
     border: 1px solid $blue-light;
   }
   &--yellow {
-    color: $black;
+    color: $black !important;
     background-color: $yellow-light;
   }
 }
